--- a/eating/css/news.css
+++ b/eating/css/news.css
@@ -16,3 +16,21 @@
     padding: 5px 10px 20px 5px;
 }
 
+ #newsBox .card {
+    /* min-width: 100px; */
+    min-height: 300px;
+    border: 1px solid #e3b4b8;
+    background-color: #f6dcce;
+    padding: 8px;
+    border-radius: 8px;
+    margin: 5px 6px;
+}
+
+.page-item.active .page-link{
+      background-color:#17A2B8!important;
+      border-color:#17A2B8!important;
+      color: #fff!important;
+}
+.page-item a{
+    color: #17A2B8;
+}
