--- a/eating/css/newsDetail.css
+++ b/eating/css/newsDetail.css
@@ -1,4 +1,3 @@
-
 /* 内容 */
 
 .detail {
@@ -11,7 +10,45 @@
     margin: 0 auto;
     text-align: center;
 }
+
 .iconfont.iconNMStubiao- {
-    color: #ffccc7;
+    color: #17A2B8;
     font-size: 40px;
+}
+
+#dest {
+    text-indent: 50px;
+}
+
+.box {
+    display: flex;
+    justify-content: left;
+    position: absolute;
+    /* left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); */
+}
+
+.ball {
+    width: 10px;
+    height: 10px;
+    background-color: #17A2B8;
+    margin: 5px;
+    border-radius: 50%;
+    animation: ball 0.6s infinite alternate;
+}
+
+.ball:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.ball:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+@keyframes ball {
+    100% {
+        opacity: 0.1;
+        transform: translate(0, 10px);
+    }
 }
